--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,8 @@ django-heroku==0.3.1
 dj-database-url==0.5.0
 djangorestframework==3.11.1
 gunicorn==20.0.4
+dj-database-url==0.5.0
+django-forms-bootstrap==3.1.0
+Pillow==7.0.0
+psycopg2-binary==2.8.4
+whitenoise==5.0.1
