--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,28 @@
 asgiref==3.2.10
-Django==3.1.2
+astroid==2.4.2
+certifi==2020.6.20
+chardet==3.0.4
+colorama==0.4.3
+djangorestframework==3.11.1
+idna==2.10
+isort==5.5.2
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+pylint==2.6.0
 pytz==2020.1
-sqlparse==0.4.1
+requests==2.24.0
+six==1.15.0
+sqlparse==0.3.1
+toml==0.10.1
+urllib3==1.25.10
+wrapt==1.12.1
+dj-database-url==0.5.0
+Django==3
 django-bmemcached==0.2.4
 django-heroku==0.3.1
-dj-database-url==0.5.0
-djangorestframework==3.11.1
 gunicorn==20.0.4
-dj-database-url==0.5.0
-django-forms-bootstrap==3.1.0
-Pillow==7.0.0
-psycopg2-binary==2.8.4
-whitenoise==5.0.1
+psycopg2==2.8.6
+pymemcache==3.3.0
+python-binary-memcached==0.30.0
+uhashring==1.2
+whitenoise==5.2.0
